sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/ReturnStatement.sand
pub class ReturnStatement {
    method() {
        return;

        return exp;

        return if cond {
            a = b;
            c
        } else {
            d
        };
    }
}