sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/NonInline.sand
pub class NonInline {
    foo() {
        (
            if let a = b() {
                c()
            } else {
                c()
            }
        )
    }
}